--- a/.github/workflows/dsc.yml
+++ b/.github/workflows/dsc.yml
@@ -26,5 +26,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Run dsc
         run: ./src/dsc/dsc.krabb build.dsc
+      
+      - name: Run gcc
+        run: gcc src/main.c
