--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,12 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Make Proj
+        run: |
+          gcc src/main.c
+          mkdir build
+          mv a.out build/krabb
+          
       - name: Run tests
         run: ./build/krabb
         
